refactoring for try less resources